--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.10",
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "express-session": "^1.18.0",
+    "ioredis": "^5.4.1",
     "mysql2": "^3.9.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -43,6 +47,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
